--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 
+/* Set root font size*/
+html{
+    font-size: 14px;
+}
+
 @layer base {
     @font-face {
         font-family: 'Schibsted Grotesk';
@@ -24,6 +29,22 @@
 html {
     background-color: theme('colors.charlestoneGreen');
     color: theme('colors.white');
+}
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: silver;
+    outline: 1px solid slategrey;
+    border-radius: 0.25rem;
 }
 
 /* Animation classes */
