Added logic to entirety of Admin (No APIs)

--- a/src/App.css
+++ b/src/App.css
@@ -114,9 +114,9 @@
 }
 
 /* Component classes */
-input[type="radio"] {
+/* input[type="radio"] {
     display: none;
-}
+} */
 
 input:invalid {
     outline: none;
